add terraform status

--- a/aws-terraform-deployment.yml
+++ b/aws-terraform-deployment.yml
@@ -19,6 +19,8 @@ stages:
       displayName: terraform install
       inputs:
         terraformVersion: 'latest'
+    - script: terraform version
+      displayName: Verify Terraform Installation
     - task: TerraformTaskV4@4
       displayName: terraform init
       inputs:
